# observability-python-otel-lgtm

./: .gitignore  CONTRIBUTING.md  Gemfile  PRD.md  README.md  _config.yml  index.html
.github/workflows/: pages.yml
_docs/: 00-outline.md  01-prerequisites.md  02-fundamentals.md  03-demo-app.md  04-auto-instrumentation.md  05-metrics.md  06-logs.md  07-custom-spans-kafka.md  08-auto-custom-hybrid.md  09-correlated-view.md  10-sampling.md  11-profiling.md  12-service-graph.md
_includes/: excalidraw.html  footer.html  header.html
_layouts/: default.html  part_index.html  plan.html  tutorial.html
_parts/: 00-foundations.md  01-the-three-signals.md  02-the-pipeline.md
_plans/: iteration-plan.md  reconciliation-plan.md
app/: Containerfile  pyproject.toml
app/app/: __init__.py  api.py  db.py  messaging.py  settings.py  worker.py
assets/css/: site.css
assets/diagrams/: README.md  fig-00-arc.excalidraw  fig-01-running-stack.excalidraw  fig-02-otel-data-path.excalidraw  fig-03-app-topology.excalidraw  fig-03-service-topology.excalidraw  fig-04-instrumentation-layers.excalidraw  fig-05-metrics-exemplars.excalidraw  fig-06-log-correlation.excalidraw  fig-07-context-propagation.excalidraw  fig-09-sampling-location.excalidraw  fig-11-correlation-graph.excalidraw  fig-12-profiling.excalidraw  fig-13-service-graph.excalidraw
deck/: deck-helpers.js  deck.js
demos/: 01-pull-and-inspect.sh  01-trace-for-free.sh  02-debug-sidecar.sh  02-trace-across-kafka.sh  03-compare-nonminimal.sh  03-metrics-exemplars.sh  04-correlated-logs.sh  04-multi-stage-build.sh  05-correlated-view.sh  05-sbom-and-signing.sh  06-cve-scanning.sh  06-sampling.sh  07-profiling.sh  07-provenance-trusted-libraries.sh  08-distroless-gotchas.sh  08-service-graph.sh  README.md  run.sh
demos/lib/: _demo.sh
examples/01-app-no-telemetry/: README.md  demo.sh  test.sh
examples/01-mesh-no-telemetry/: README.md  demo.sh
examples/01-no-telemetry/: README.md  demo.sh  test.sh
examples/02-auto-instrumentation/: README.md  demo.sh  test.sh
examples/03-metrics/: README.md  demo.sh  test.sh
examples/04-logs/: README.md  demo.sh  test.sh
examples/05-spans-across-kafka/: README.md  demo.sh  test.sh
examples/06-hybrid/: README.md  demo.sh  test.sh
examples/07-correlated-view/: README.md  demo.sh  test.sh
examples/08-sampling/: README.md  demo.sh  test.sh
examples/09-profiling/: README.md  demo.sh  test.sh
examples/10-service-graph/: README.md  demo.sh  test.sh
presentations/: README.md  otel-lgtm-python-r1.0.pptx  otel-lgtm-python-r1.1.pptx  otel-lgtm-python.pptx
proto/: README.md
proto/mesh/common/v1/: common.proto
proto/mesh/inventory/v1/: inventory.proto
proto/mesh/payment/v1/: payment.proto
proto/shop/common/v1/: common.proto
proto/shop/inventory/v1/: inventory.proto
proto/shop/payment/v1/: payment.proto
scripts/: diagrams.py  gen-protos.sh  generate_diagram.py  render_pngs.sh  ship.sh  test-all-examples.sh
services/: Containerfile
services/common/: pyproject.toml
services/common/obs/: __init__.py  db.py  kafka.py  kafka_propagation.py  logging.py  otel.py  profiling.py
services/inventory/: pyproject.toml
services/inventory/inventory/: server.py
services/notification/: pyproject.toml
services/notification/notification/: worker.py
services/order/: pyproject.toml
services/order/order/: grpc_clients.py  main.py  repo.py
services/payment/: pyproject.toml
services/payment/payment/: server.py
services/review/: pyproject.toml
services/review/review/: main.py
services/shipping/: pyproject.toml
services/shipping/shipping/: worker.py
stack/: compose.yaml
stack/db/init/: 01-schema.sql
stack/grafana/: datasources.yaml
stack/otelcol/: config.tail-sampling.yaml  config.yaml
tools/: README.md
tools/curl/: get-order.sh  graphql-reviews.sh  place-order.sh
tools/load/: ghz-inventory.sh  hey-orders.sh
tools/postman/: observability-mesh.postman_collection.json  observability.postman_collection.json
