[tool.poetry]
name = "obs"
version = "0.1.0"
description = "Shared OpenTelemetry bootstrap and plumbing for the observability demo services."
authors = ["Robert Sedor"]
license = "Apache-2.0"
packages = [{ include = "obs" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
# API + SDK
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
# OTLP over HTTP (the house default — port 4318)
opentelemetry-exporter-otlp-proto-http = "^1.30.0"
# Auto-instrumentation for the synchronous hops
opentelemetry-instrumentation-fastapi = "^0.51b0"
opentelemetry-instrumentation-grpc = "^0.51b0"
opentelemetry-instrumentation-asyncpg = "^0.51b0"
# Clients used through the shared helpers
aiokafka = "^0.12.0"
asyncpg = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
