[tool.poetry]
name = "notification"
version = "0.1.0"
description = "Notification service — Kafka consumer that sends notifications."
authors = ["Robert Sedor"]
packages = [{ include = "notification" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
obs = { path = "../common", develop = true }
aiokafka = "^0.12.0"

[tool.poetry.scripts]
serve = "notification.worker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
