[tool.poetry]
name = "order"
version = "0.1.0"
description = "Order service — external REST front door that fans out across the mesh."
authors = ["Robert Sedor"]
packages = [{ include = "order" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
obs = { path = "../common", develop = true }
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.0"
grpcio = "^1.68.0"
aiokafka = "^0.12.0"
asyncpg = "^0.30.0"

[tool.poetry.scripts]
serve = "order.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
