[tool.poetry]
name = "shipping"
version = "0.1.0"
description = "Shipping service — Kafka consumer that creates shipments."
authors = ["Robert Sedor"]
packages = [{ include = "shipping" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
obs = { path = "../common", develop = true }
aiokafka = "^0.12.0"
asyncpg = "^0.30.0"

[tool.poetry.scripts]
serve = "shipping.worker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
